--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "version": "0.0.0",
   "description": "BORINE monorepo (Expo + React Native)",
   "scripts": {
-    "medication:start": "npm run start --workspace apps/medication",
-    "medication:android": "npm run android --workspace apps/medication",
-    "medication:ios": "npm run ios --workspace apps/medication",
-    "medication:web": "npm run web --workspace apps/medication",
+    "alimi:start": "npm run start --workspace apps/alimi",
+    "alimi:android": "npm run android --workspace apps/alimi",
+    "alimi:ios": "npm run ios --workspace apps/alimi",
+    "alimi:web": "npm run web --workspace apps/alimi",
+    "alimi:apk": "node scripts/android-build.mjs alimi apk",
+    "alimi:aab": "node scripts/android-build.mjs alimi aab",
+    "battery:apk": "node scripts/android-build.mjs battery apk",
+    "battery:aab": "node scripts/android-build.mjs battery aab",
+    "malhaejwo:apk": "node scripts/android-build.mjs malhaejwo apk",
+    "malhaejwo:aab": "node scripts/android-build.mjs malhaejwo aab",
+    "memo:apk": "node scripts/android-build.mjs memo apk",
+    "memo:aab": "node scripts/android-build.mjs memo aab",
     "lint": "eslint \"apps/**/*.{ts,tsx}\" \"packages/**/*.{ts,tsx}\"",
     "format": "prettier --write \"**/*.{js,ts,tsx,json,md}\"",
-    "test": "echo \"(테스트 스텁)\" && exit 0"
+    "test": "echo \"(????????)\" && exit 0",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "workspaces": [
     "apps/*",
@@ -30,5 +40,20 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
     "prettier": "^3.7.4"
+  },
+  "dependencies": {
+    "expo": "~54.0.27",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "expo-notifications": "^0.32.14",
+    "expo-application": "^7.0.8",
+    "expo-asset": "^12.0.11",
+    "expo-font": "^14.0.10",
+    "expo-splash-screen": "^31.0.12",
+    "react-native-get-random-values": "^2.0.0",
+    "react-native-google-mobile-ads": "^16.0.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   }
 }
