--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "battery:aab": "node scripts/android-build.mjs battery aab",
     "malhaejwo:apk": "node scripts/android-build.mjs malhaejwo apk",
     "malhaejwo:aab": "node scripts/android-build.mjs malhaejwo aab",
+    "malhaejwo:start": "npm run start --workspace apps/malhaejwo",
+    "malhaejwo:android": "npm run android --workspace apps/malhaejwo",
+    "malhaejwo:ios": "npm run ios --workspace apps/malhaejwo",
+    "malhaejwo:web": "npm run web --workspace apps/malhaejwo",
     "memo:apk": "node scripts/android-build.mjs memo apk",
     "memo:aab": "node scripts/android-build.mjs memo aab",
     "lint": "eslint \"apps/**/*.{ts,tsx}\" \"packages/**/*.{ts,tsx}\"",
