--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "alimi:web": "npm run web --workspace apps/alimi",
     "alimi:apk": "node scripts/android-build.mjs alimi apk",
     "alimi:aab": "node scripts/android-build.mjs alimi aab",
-    "battery:apk": "node scripts/android-build.mjs battery apk",
-    "battery:aab": "node scripts/android-build.mjs battery aab",
     "malhaejwo:apk": "node scripts/android-build.mjs malhaejwo apk",
     "malhaejwo:aab": "node scripts/android-build.mjs malhaejwo aab",
     "malhaejwo:start": "npm run start --workspace apps/malhaejwo",
     "malhaejwo:android": "npm run android --workspace apps/malhaejwo",
     "malhaejwo:ios": "npm run ios --workspace apps/malhaejwo",
     "malhaejwo:web": "npm run web --workspace apps/malhaejwo",
-    "memo:apk": "node scripts/android-build.mjs memo apk",
-    "memo:aab": "node scripts/android-build.mjs memo aab",
+    "magnifier:apk": "node scripts/android-build.mjs magnifier apk",
+    "magnifier:aab": "node scripts/android-build.mjs magnifier aab",
+    "postinstall": "patch-package",
+    "magnifier:start": "npm run start --workspace apps/magnifier",
+    "magnifier:android": "npm run android --workspace apps/magnifier",
     "lint": "eslint \"apps/**/*.{ts,tsx}\" \"packages/**/*.{ts,tsx}\"",
     "format": "prettier --write \"**/*.{js,ts,tsx,json,md}\"",
     "test": "echo \"(????????)\" && exit 0",
@@ -43,18 +44,20 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
+    "patch-package": "^8.0.1",
     "prettier": "^3.7.4"
   },
   "dependencies": {
-    "expo": "~54.0.27",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "expo-notifications": "^0.32.14",
+    "expo": "~54.0.27",
     "expo-application": "^7.0.8",
     "expo-asset": "^12.0.11",
     "expo-font": "^14.0.10",
+    "expo-image": "~3.0.11",
+    "expo-notifications": "^0.32.14",
     "expo-splash-screen": "^31.0.12",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-get-random-values": "^2.0.0",
     "react-native-google-mobile-ads": "^16.0.1",
     "react-native-safe-area-context": "~5.6.0",
